--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,10 @@
-<app-default-login-layout></app-default-login-layout>
+<app-default-login-layout title="Login into your acount"
+primaryBtnText = "Login now"
+secondaryBtnText = "Singup now"
+
+
+>
+
+</app-default-login-layout>
+<!--fazer mudanças aqui colocar no title Login colaboradores-->
+<!--Nos botões colocar adicionar e excluir-->
