--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,8 +1,19 @@
 <main>
-    <section>
-        <img src="/assets/svg/olabi-logo.png" alt="logo">
-        <h2>Aqui</h2>
-        <button></button>
-        <button></button>
-    </section>
+  <section class="form-section">
+    <img src="assets/olabi_logo.png" alt="logo" />
+    <h2>{{ title }}</h2>
+    <div class="btn-wrapper">
+      <button class="btn-primary">{{ primaryBtnText }}</button>
+      <div class="divider">
+        <div></div>
+        <span>or</span>
+        <div></div>
+      </div>
+      <button class="btn-secondary">{{ secondaryBtnText }}</button>
+    </div>
+  </section>
+  <section class="main-section">
+    <h1>Afrocódigos</h1>
+    <img src="" alt="">
+  </section>
 </main>
