Add adicionar e excluir ok

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,9 +1,10 @@
-<app-default-login-layout title="Login into your acount"
-primaryBtnText = "Login now"
-secondaryBtnText = "Singup now"
-
-
+<app-default-login-layout title="Painel de Gerenciamento de Colaboradores"
+primaryBtnText = "Adicionar"
+secondaryBtnText = "Excluir"
 >
+<form [formGroup]="loginForm">
+    
+</form>
 
 </app-default-login-layout>
 <!--fazer mudanças aqui colocar no title Login colaboradores-->
