--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -2,7 +2,7 @@
   <section class="form-section">
     <img src="assets/olabi_logo.png" alt="logo" />
     <h2>{{ title }}</h2>
-    <ng-content select=""></ng-content>
+    <ng-content></ng-content>
     <div class="btn-wrapper">
       <button class="btn-primary">{{ primaryBtnText }}</button>
       <div class="divider">
