--- a/src/app/components/default-login-layout/default-login-layout.component.css
+++ b/src/app/components/default-login-layout/default-login-layout.component.css
@@ -34,7 +34,7 @@ main {
     h2 {
       font-size: 20px;
       font-weight: bold;
-      font-family: "popins";
+      /* font-family: "Popins", sans-serif; */
       margin-bottom: 42px;
     }
   }
